--- a/package.json
+++ b/package.json
@@ -5,13 +5,24 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "tsc": "tsc server.ts",
+    "dev": "ts-node-dev --respawn --transpileOnly server.ts",
+    "prod": "tsc server.ts && node server.js"
   },
   "author": "Phong Tran",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.0",
+    "@types/socket.io": "^2.1.4",
+    "tslint": "^6.1.2"
   }
 }
